@@ -1,3 +1,9 @@
+2007-09-07	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* init.c: Increase stack size for shttpd to 48K.
+	* osmonweb.c: Turn off some VERY noisy debug output. Clean up
+	osmonweb_WriteBlock() and watch it work.
+
 2007-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile, osmonweb.c, osmonweb_RTEID.c, osmonweb_int.h: Remove JOEL
